fix animation & add close and sound icon
- fix camera cut off animation
- add icon for close and sound

--- a/css/sc-year-end-spend-campaign.scss
+++ b/css/sc-year-end-spend-campaign.scss
@@ -3497,17 +3497,19 @@ $height-breakpoints-basewidth: (
           background-size: 100%;
           background-repeat: repeat;
           background-image: url(../images/game/sc-year-end-spend-bg-light-blue.png);
-          width: calc(100% + calc(min(4px, #{responsive-font(4px)})));
+          // width: calc(100% + calc(min(4px, #{responsive-font(4px)})));
+        
         }
 
-        .sc-year-end-spend-polaroid-game__pocket .sc-year-end-spend-polaroid-game__pocket-camera img {
-          margin-left: calc(min(4px, #{responsive-font(4px)}));
-        }
+        // .sc-year-end-spend-polaroid-game__pocket .sc-year-end-spend-polaroid-game__pocket-camera img {
+        //   margin-left: calc(min(4px, #{responsive-font(4px)}));
+        // }
 
         .sc-year-end-spend-polaroid-game__slider {
           z-index: 0;
         }
       }
+      
 
       &__wrapper {
         flex-direction: column;
@@ -3518,6 +3520,78 @@ $height-breakpoints-basewidth: (
         top: 0;
         left: 0;
         z-index: 5;
+
+        //   img,
+        // svg {
+        //   width: 100%;
+        //   height: auto;
+        // }
+
+        .sc-year-end-spend-polaroid-game {
+        &__top {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: calc(min(30px, #{responsive-height(30px)})) calc(min(24px, #{responsive-font(24px)})) 0px;
+
+            @media screen and (max-width: 414px) and (max-height: 736px) {
+              padding: calc(min(25px, #{responsive-height(25px)})) calc(min(20px, #{responsive-font(20px)})) 0px;
+            }
+
+            @media screen and (max-width: 375px) and (max-height: 700px) {
+              padding: calc(min(25px, #{responsive-height(25px)})) calc(min(20px, #{responsive-font(20px)})) 0px;
+            }
+            
+            .sc-year-end-spend-polaroid-game {
+              &__header {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: calc(min(5px, #{responsive-height(5px)}));
+                padding-bottom: calc(min(40px, #{responsive-height(40px)}));
+
+                &-top{
+                  display: flex;
+                  gap: calc(min(10px, #{responsive-height(10px)}));
+                  justify-content: space-between;
+                  align-items: center;
+                  width: 100%;
+                }
+
+                &-sound {
+                  width: calc(min(28px, #{responsive-font(28px)}));
+                  align-self: flex-start;
+                }
+
+                &-close {
+                  width: calc(min(20px, #{responsive-font(20px)}));
+                  align-self: flex-start;
+                }
+
+                &-masthead {
+                  width: 100%;
+                  height: auto;
+
+                  @media screen and (max-width: 414px) and (max-height: 736px) {
+                    width: 90%;
+                  }
+
+                  @media screen and (max-width: 375px) and (max-height: 700px) {
+                    width: 90%;
+                  }
+
+                }
+                img{
+                    width: 100%;
+                  height: auto;
+                  }
+              }
+            }
+          }
+        }
       }
 
       &__bg-dark-blue,
@@ -3547,23 +3621,6 @@ $height-breakpoints-basewidth: (
         background-image: url(../images/game/sc-year-end-spend-bg-light-blue.png);
         background-size: 100%;
         background-repeat: repeat;
-      }
-
-      &__header {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        padding-top: calc(min(55px, #{responsive-height(55px)}));
-        padding-bottom: calc(min(40px, #{responsive-height(40px)}));
-
-        &-title {
-          width: calc(min(344px, #{responsive-font(344px)}));
-          height: auto;
-
-          img {
-            width: 100%;
-          }
-        }
       }
 
       &__slider {
@@ -3704,6 +3761,7 @@ $height-breakpoints-basewidth: (
         z-index: 14;
         bottom: -65px;
         pointer-events: none;
+        display: block!important;
 
         &-camera {
           width: calc(min(488px, #{responsive-font(488px)}));
@@ -3814,9 +3872,7 @@ $height-breakpoints-basewidth: (
 
           &.dismiss-card {
 
-            .sc-year-end-spend-polaroid-game__dispense-polaroid img:nth-child(1),
-            .sc-year-end-spend-polaroid-game__dispense-polaroid img:nth-child(2),
-            .sc-year-end-spend-polaroid-game__dispense-polaroid img:nth-child(3) {
+            .sc-year-end-spend-polaroid-game__dispense-polaroid img {
               display: none;
             }
           }
